# dep-graph-viz

./: .gitignore  README.md  pyproject.toml
dep_graph/: __init__.py  __main__.py  cli.py  config.py  graph.py  models.py  presets.py  renderer.py  scanner.py
dep_graph/parsers/: __init__.py  javascript.py  json_template.py  liquid.py
dep_graph/templates/: graph.html
docs/superpowers/plans/: 2026-03-25-hybrid-depth-layering.md  2026-03-26-enhanced-visualization.md
docs/superpowers/specs/: 2026-03-25-hybrid-depth-layering-design.md  2026-03-26-enhanced-visualization-design.md
skill/: SKILL.md
tests/: test_config.py  test_cycles.py  test_graph_depth.py  test_models.py  test_unused.py
